argocd/flask-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flask-demo
  name: service-flask-demo
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: flask-demo
