argocd/flask-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: flask-demo
  name: flask-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-flask-demo
              servicePort: 5000
